--- a/docs/sun/063/sun63.tex
+++ b/docs/sun/063/sun63.tex
@@ -1,17 +1,16 @@
-\documentclass[11pt,twoside]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,twoside,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardocnumber}    {63.4}
-\newcommand{\stardocauthors}   {Paul Rees}
-\newcommand{\stardocdate}      {28 July 1992}
-\newcommand{\stardoctitle}     {SPAG\\[2ex]
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {63.4}
+\stardocauthors     {Paul Rees}
+\stardocdate        {28 July 1992}
+\stardoctitle     {SPAG\\[2ex]
                                Spaghetti Unscrambler}
-\newcommand{\stardocabstract}  {
+\stardocabstract  {
 SPAG is a program for unscrambling ``spaghetti'' Fortran code by
 re-ordering blocks of statements in such a way that the structure of the
 Fortran is improved, whilst remaining logically equivalent to the original
@@ -22,220 +21,13 @@ Fortran.
 % ? End of document identification
 
 % -----------------------------------------------------------------------------
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-% Define commands for HTML-only or LaTeX-only text.
-\newcommand{\html}[1]{}
-\newcommand{\latex}[1]{#1}
-
-% Use latex2html 98.2.
-\newcommand{\latexhtml}[2]{#1}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % from the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document-specific \newcommand or \newenvironment commands.
+% ? Document-specific \providecommand or \newenvironment commands.
 % ? End of document-specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-\newpage
-\begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \tableofcontents
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
-\end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section {Introduction\xlabel{introduction}}
 
@@ -251,7 +43,7 @@ STARLINK Programming Standard
 (\xref{SGP/16}{sgp16}{}).
 SPAG can also be used to update Fortran 66 code.
 The SPAG software is part of a commercial suite of tools for software
-maintenance called plusFORT (formerly PRISM), marketed by {\it Polyhedron
+maintenance called plusFORT (formerly PRISM), marketed by \textit{Polyhedron
 Software}, and is available on STARLINK DECnet node STADAT (the STARLINK
 multi-r\^{o}le MicroVAX).
 The other plusFORT tools are not available on STARLINK.
@@ -263,40 +55,32 @@ SPAG is only available on STARLINK DECnet node STADAT, which is accessible
 to all STARLINK registered users (contact your Site Manager for details).
 Once logged onto STADAT, in order to use SPAG you must first type
 
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 $ SPAGINIT
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 This will set up several logical names and symbols used by the SPAG software.
 Having done this, SPAG may be run on your Fortran file, say SOURCE.FOR, by
 typing
 
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 $ SPAGRUN SOURCE.FOR
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
-The asterix may be used as a wild card in the file name, {\em e.g.}
+The asterix may be used as a wild card in the file name, \emph{e.g.}
 
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 $ SPAGRUN S*.FOR
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 This will process all files beginning with ``S'' and with extension
 ``.FOR'' and put all the output into one file.
 The output from SPAG will go into a file called SPAG.OUT by default.
-An output file may be specified using the ``TO='' qualifier, {\em e.g.}
+An output file may be specified using the ``TO='' qualifier, \emph{e.g.}
 
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 $ SPAGRUN SOURCE.FOR TO=SOURCE.OUT
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 Note that the qualifiers used with the SPAGRUN command do not need to
 be preceded by a ``/''.
@@ -323,11 +107,9 @@ Also, the ``ERR='' qualifier may be used to route error messages generated by
 SPAG to a file.
 Here is an example:
 
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 $ SPAGRUN SOURCE.FOR TO=SOURCE.OUT ERR=SOURCE.ERR RUNTYPE=PP
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 This will only indent the Fortran code in SOURCE.FOR,
 putting the output in SOURCE.OUT and any error messages in SOURCE.ERR.
@@ -344,11 +126,9 @@ and containing the code for one subroutine and with the ``.FOR'' extension,
 using the QSPLIT command.
 The syntax for QSPLIT is simply
 
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 $ QSPLIT SPAG.OUT
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 where SPAG.OUT is the name of the output file from SPAG.
 
@@ -372,7 +152,7 @@ by the restructuring.
 \item Should it be necessary, the output from SPAG can be customised by
 modifying the SPAG configuration file used.
 However, you should note that the precise format of this file changes with each
-update of SPAG released by {\it Polyhedron Software}.
+update of SPAG released by \textit{Polyhedron Software}.
 If your private configuration file stops working, check that SPAG has not been
 updated.
 If it has, then the remedy is to use the configuration file provided in
@@ -389,8 +169,7 @@ subroutine written in Fortran 66.
 \begin {center}
 {\bf\large Before SPAG:}
 \end {center}
-\begin {verbatim}
-
+\begin {terminalv}
 C
 C  Final row and column interchange
 C
@@ -419,14 +198,13 @@ C
       goto 20
  21   return
        end
-\end{verbatim}
+\end{terminalv}
 \pagebreak
 
 \begin {center}
 {\bf\large After SPAG:}
 \end {center}
-\begin {verbatim}
-
+\begin {terminalv}
 C
 C  Final row and column interchange
 C
@@ -462,5 +240,5 @@ C
          GO TO 100
       END IF
       END
-\end{verbatim}
+\end{terminalv}
 \end {document}
